# django-google-auth

./: README.md  pyproject.toml
gsi/: __init__.py  apps.py  conf.py  context_processors.py  urls.py  views.py
gsi/templatetags/: gsi_tags.py
