[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-gsi"
version = "0.1.0"
description = "Minimal Google Sign-In for Django — one Client ID, any project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "google-auth>=2.0",
]

[project.urls]
Homepage = "https://github.com/akarca/django-google-auth"

[tool.setuptools.packages.find]
include = ["gsi*"]
